[planerp-3-5-2053] create very simple materialcontroller to try stored function from postgesql

--- a/erpPlanner/api/appsettings.json
+++ b/erpPlanner/api/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": {
-    "postgresql": "postgresql://alarm:alarm@192.168.0.109:5432/PlannerP"
+  "ConnectionStrings": {
+    "postgresql": "Host=192.168.0.109;Port=5432;Username=alarm;Password=alarm;Database=PlanerP;"
   },
   "AllowedHosts": "*"
 }
