--- a/erpPlanner/spa/package.json
+++ b/erpPlanner/spa/package.json
@@ -27,19 +27,9 @@
     "@milkdown/prose": "^7.3.5",
     "@milkdown/theme-nord": "^7.3.5",
     "@milkdown/transformer": "^7.3.5",
+    "@ng-icons/bootstrap-icons": "^27.2.0",
     "@ng-icons/core": "^27.2.0",
     "@ng-icons/heroicons": "^27.2.0",
-    "prosemirror-commands": "^1.5.2",
-    "prosemirror-dropcursor": "^1.8.1",
-    "prosemirror-example-setup": "^1.2.2",
-    "prosemirror-gapcursor": "^1.3.2",
-    "prosemirror-history": "^1.3.2",
-    "prosemirror-inputrules": "^1.4.0",
-    "prosemirror-keymap": "^1.2.2",
-    "prosemirror-menu": "^1.2.4",
-    "prosemirror-schema-basic": "^1.2.2",
-    "prosemirror-schema-list": "^1.3.0",
-    "prosemirror-state": "^1.4.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
