--- a/erpPlanner/spa/package.json
+++ b/erpPlanner/spa/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.0.0",
     "@milkdown/core": "^7.3.5",
     "@milkdown/ctx": "^7.3.5",
+    "@milkdown/plugin-clipboard": "^7.3.5",
     "@milkdown/plugin-history": "^7.3.5",
     "@milkdown/plugin-math": "^7.3.5",
     "@milkdown/preset-commonmark": "^7.3.5",
