--- a/erpPlanner/api/erpPlanner.csproj
+++ b/erpPlanner/api/erpPlanner.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Dapper.Postgres" Version="0.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="8.0.2" />
+    <PackageReference Include="QRCoder" Version="1.5.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
