adding julia and fatfs

--- a/embedded/CMakeLists.txt
+++ b/embedded/CMakeLists.txt
@@ -2,12 +2,12 @@
 cmake_minimum_required(VERSION 3.28 FATAL_ERROR)
 
 message("\
-================================================\   
-  libopencm3 cmake                              \           
-  for stm32                                     \      
-  with automatic arch setting                   \             
-  and linker script generator                   \      
-================================================\   
+================================================\
+  libopencm3 cmake                              \
+  for stm32                                     \
+  with automatic arch setting                   \
+  and linker script generator                   \
+================================================\
 ")
 
 project(blink VERSION 0.0.1 LANGUAGES CXX C ASM)
@@ -21,6 +21,14 @@ set(auto_stm32_arch "f4")
 set(auto_stm32_device "stm32f407vgt6")
 # ============================================
 include(cmake/toolchain-arm-none-eabi-gcc.cmake)
+include(FetchContent)
+
+FetchContent_Declare(
+  fatFs
+  URL     http://elm-chan.org/fsw/ff/arc/ff15.zip
+)
+
+FetchContent_MakeAvailable(fatFs)
 
 # ============================================
 # CHANGE YOUR TARGET BASED ON YOUR PROJECT
