--- a/erpPlanner/spa/package.json
+++ b/erpPlanner/spa/package.json
@@ -32,6 +32,8 @@
     "@ng-icons/bootstrap-icons": "^27.2.0",
     "@ng-icons/core": "^27.2.0",
     "@ng-icons/heroicons": "^27.2.0",
+    "angular-slickgrid": "^8.0.0",
+    "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
