[planerp-20-6-1554] create upload resource and image

--- a/erpPlanner/api/appsettings.json
+++ b/erpPlanner/api/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "postgresql": "Host=192.168.0.109;Port=5432;Username=alarm;Password=alarm;Database=PlanerP;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Sftp": {
+    "Host": "192.168.0.109",
+    "User": "alarm",
+    "Pass": "alarm",
+    "BasePath": "/home/alarm/",
+    "ImagePath": "image"
+  }
 }
