[plannerp-20-6-1647] add fileUtilServices

--- a/erpPlanner/api/appsettings.json
+++ b/erpPlanner/api/appsettings.json
@@ -14,6 +14,7 @@
     "User": "alarm",
     "Pass": "alarm",
     "BasePath": "/home/alarm/",
-    "ImagePath": "image"
+    "ImagePath": "image",
+    "ResourceDocsPath": "resourceDocs"
   }
 }
