[plannerp-22-6-1213] adding Entity Diagram

--- a/erpPlanner/api/docs/toc.yml
+++ b/erpPlanner/api/docs/toc.yml
@@ -2,3 +2,5 @@
   href: introduction.md
 - name: Getting Started
   href: getting-started.md
+- name: Project Plan Overview
+  href: PlannerPPlan.md
