--- a/embedded/generator-stm32-libopencm/package.json
+++ b/embedded/generator-stm32-libopencm/package.json
@@ -29,6 +29,8 @@
     "yosay": "^2.0.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@stylistic/eslint-plugin-ts": "^2.2.2",
     "@types/glob": "^7.1.4",
     "@types/inquirer": "^9.0.7",
     "@types/lodash": "^4.14.168",
@@ -37,7 +39,10 @@
     "@types/yosay": "^2.0.0",
     "@yeoman/types": "^1.2.0",
     "copyfiles": "^2.4.1",
+    "eslint": "9.x",
+    "globals": "^15.6.0",
     "onchange": "^7.1.0",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "typescript-eslint": "^7.14.1"
   }
 }
