add rough adapter

--- a/designPatternCpp/CMakeLists.txt
+++ b/designPatternCpp/CMakeLists.txt
@@ -6,10 +6,14 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_executable(
   builder
  ./src/Builder.cpp
- ./src/Builder.hpp
 )
 
 add_executable(
    bridge
   ./src/Bridge.cpp
+)
+
+add_executable(
+  adapter
+  ./src/Adapter.cpp
 )
