[woah] add mobx and create worked based setup mobx-react-vite

--- a/woah/spa/tsconfig.json
+++ b/woah/spa/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "compilerOptions": {
+    "experimentalDecorators": true /* or just remove the flag */
+  },
   "files": [],
   "references": [
     {
