--- a/woah/spa/package.json
+++ b/woah/spa/package.json
@@ -10,25 +10,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fluentui/react-components": "^9.54.6",
+    "@types/react-router-dom": "^5.3.3",
+    "buffer": "^6.0.3",
     "mobx-react": "^9.1.1",
     "mobx-react-lite": "^4.0.7",
+    "plotly.js": "^2.34.0",
+    "plotly.js-dist": "^2.34.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.7.0",
+    "@stylistic/eslint-plugin-ts": "^2.3.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/plotly.js": "^2.33.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-plotly.js": "^2.6.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
     "electron": "^31.2.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.7.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "mobx": "^6.13.1",
+    "react-icons": "^5.2.1",
     "sass": "^1.77.8",
-    "typescript": "^5.2.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.17.0",
     "vite": "^5.3.4"
   }
 }
