--- a/erpPlanner/spa/package.json
+++ b/erpPlanner/spa/package.json
@@ -35,6 +35,7 @@
     "angular-slickgrid": "^8.0.0",
     "bootstrap": "^5.3.3",
     "emoji-toolkit": "^8.0.0",
+    "googleapis": "^140.0.1",
     "marked": "^12.0.2",
     "ngx-markdown": "^18.0.0",
     "prismjs": "^1.29.0",
