--- a/erpPlanner/api/appsettings.json
+++ b/erpPlanner/api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "postgresql": "Host=localhost;Port=5432;Username=ah;Password=;Database=planerp;",
+    "postgresql": "Host=localhost;Port=5432;Username=ah;Password=;Database=planerp;IncludeErrorDetail=true",
     "sqlite": "Data Source=planerp.db",
     "sqlserver": "Server=DESKTOP-HD67VPS\\SQLEXPRESS;Database=planerp;Trusted_Connection=True;TrustServerCertificate=true;"
   },
