--- a/erpPlanner/api/erpPlanner.csproj
+++ b/erpPlanner/api/erpPlanner.csproj
@@ -16,6 +16,9 @@
     <PackageReference Include="Dapper.Postgres" Version="0.0.5" />
     <PackageReference Include="FluentMigrator" Version="5.2.0" />
     <PackageReference Include="FluentMigrator.Runner" Version="5.2.0" />
+    <PackageReference Include="GraphQL.AspNet" Version="1.4.1" />
+    <PackageReference Include="GraphQL.Server.Ui.Altair" Version="7.7.1" />
+    <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="7.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
