--- a/blocksuiteVanilla/package.json
+++ b/blocksuiteVanilla/package.json
@@ -12,7 +12,8 @@
     "@blocksuite/blocks": "0.15.0-canary-202406291027-8aed732",
     "@blocksuite/presets": "0.15.0-canary-202406291027-8aed732",
     "@blocksuite/store": "0.15.0-canary-202406291027-8aed732",
-    "y-indexeddb": "^9.0.12"
+    "y-indexeddb": "^9.0.12",
+    "yjs": "^13.6.18"
   },
   "devDependencies": {
     "typescript": "^5.4.5",
