--- a/blocksuiteVanilla/package.json
+++ b/blocksuiteVanilla/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@blocksuite/blocks": "0.15.0-canary-202406291027-8aed732",
-    "@blocksuite/presets": "0.15.0-canary-202406291027-8aed732",
-    "@blocksuite/store": "0.15.0-canary-202406291027-8aed732",
-    "lit": "^3.1.4",
+    "@blocksuite/blocks": "0.15.0",
+    "@blocksuite/presets": "0.15.0",
+    "@blocksuite/store": "0.15.0",
     "y-indexeddb": "^9.0.12",
     "yjs": "^13.6.18"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@blocksuite/block-std": "^0.15.0",
+    "@rollup/plugin-babel": "^6.0.4",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
   },
