--- a/slickgrid-uni/package.json
+++ b/slickgrid-uni/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-slick-grid",
+  "name": "slickgrid-uni",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,12 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "sass": "^1.77.7",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.4"
   },
   "dependencies": {
-    "boostrap": "^2.0.0",
-    "slickgrid": "^5.10.1"
+    "slickgrid": "^5.11.0"
   }
 }
