--- a/slickgrid-uni/package.json
+++ b/slickgrid-uni/package.json
@@ -13,6 +13,8 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
+    "lit": "^3.2.0",
+    "lit-html": "^3.2.0",
     "slickgrid": "^5.11.0"
   }
 }
