--- a/erpPlanner/spa/package.json
+++ b/erpPlanner/spa/package.json
@@ -38,6 +38,7 @@
     "googleapis": "^140.0.1",
     "marked": "^12.0.2",
     "ngx-markdown": "^18.0.0",
+    "primeng": "^17.18.8",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
