make dashboard layout

--- a/erpPlanner/spa/package.json
+++ b/erpPlanner/spa/package.json
@@ -38,6 +38,8 @@
     "googleapis": "^140.0.1",
     "marked": "^12.0.2",
     "ngx-markdown": "^18.0.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.8",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
@@ -49,7 +51,6 @@
     "@angular/cli": "^18.0.1",
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
-    "daisyui": "^4.7.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
