--- a/erpPlanner/spa/angular.json
+++ b/erpPlanner/spa/angular.json
@@ -34,6 +34,8 @@
               "src/styles.scss",
               "node_modules/prismjs/themes/prism-okaidia.css",
               "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
               "node_modules/prismjs/prism.js",
