--- a/erpPlanner/spa/tsconfig.json
+++ b/erpPlanner/spa/tsconfig.json
@@ -19,7 +19,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "allowUnusedLabels":true,
+    "allowUnusedLabels": true,
     "lib": [
       "ES2022",
       "dom"
@@ -29,6 +29,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "fullTemplateTypeCheck": true
   }
 }
