update on card a bit

--- a/erpPlanner/api/appsettings.json
+++ b/erpPlanner/api/appsettings.json
@@ -12,10 +12,10 @@
   },
   "AllowedHosts": "*",
   "Sftp": {
-    "Host": "192.168.0.109",
-    "User": "alarm",
-    "Pass": "alarm",
-    "BasePath": "/home/alarm/",
+    "Host": "localhost",
+    "User": "sftpuser",
+    "Pass": "123",
+    "BasePath": "/home/ah/sftp_root/",
     "ImagePath": "image",
     "ResourceDocsPath": "resourceDocs"
   }
