--- a/erpPlanner/spa_react/package.json
+++ b/erpPlanner/spa_react/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@primer/react": "^36.27.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "mobx": "^6.13.2",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
