--- a/texteditor/prosemirror/package.json
+++ b/texteditor/prosemirror/package.json
@@ -18,13 +18,11 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
-    "prosemirror-example-setup": "^1.2.2",
-    "prosemirror-history": "^1.4.1",
-    "prosemirror-keymap": "^1.2.2",
     "prosemirror-markdown": "^1.13.0",
     "prosemirror-model": "^1.22.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-transform": "^1.9.0",
-    "prosemirror-view": "^1.33.8"
+    "prosemirror-view": "^1.33.8",
+    "rope-sequence": "^1.3.4"
   }
 }
