--- a/texteditor/prosemirror/package.json
+++ b/texteditor/prosemirror/package.json
@@ -18,7 +18,9 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
-    "prosemirror-markdown": "^1.13.0",
+    "@types/markdown-it": "^14.1.2",
+    "lit": "^3.2.1",
+    "markdown-it": "^14.1.0",
     "prosemirror-model": "^1.22.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-transform": "^1.9.0",
